actualización para refresh

--- a/accounts.yml
+++ b/accounts.yml
@@ -2,7 +2,7 @@ build:
   version: "v0.0.2"
 
 support:
-  message: "Bienvenidos al sistema bancario (Cuentas) Accenture GIT MODIFIED"
+  message: "Bienvenidos al sistema bancario (Cuentas) Accenture GIT - MODIFIED"
   contactInfo:
     name: "Veronica Cano"
     email: "veronica.cano@accenture.com"
